--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="card">
                 <!-- Logo -->
                 <div class="logo">
-                    <img src="https://i.postimg.cc/Nfqp8gb6/Screenshot-2025-01-05-16-43-06-25-99c04817c0de5652397fc8b56c3b3817.jpg" alt="Logo">
+                    <img src="https://i.postimg.cc/y80vhbG1/naven03.webp" alt="Logo">
                 </div>
                 <!-- Name -->
                 <div class="nick">Naven</div>
@@ -52,7 +52,7 @@
                 <!-- Song Card -->
                 <div class="song-card">
                     <div class="song-cover">
-                        <img src="https://i.postimg.cc/Vkbnwdtp/IMG-20250105-141147-084.jpg" alt="Okładka">
+                        <img src="https://i.postimg.cc/wxrkVF4M/0971739800410963.jpg" alt="navenog">
                     </div>
                     <div class="song-info">
                         <div class="song-title">Naven</div>
