--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Background Video -->
     <div class="video-container">
         <video autoplay muted loop>
-            <source src="https://www.blogger.com/video.g?token=AD6v5dwxCFAsUbtXCq13RFEgN_oNJxNdsUTdF6oyGljfAYt3jHjQcK31sqfaX3kdbdHdDQXx4DodAB1SdoilhalkzlkZaXNj77Q4DsfHrVvr0i-d2Usmxqa4zjqqWscJ7UWAgnVuTT0" type="video/mp4" />
+            <source src="https://drive.google.com/uc?export=download&id=1-b0JxV59yZi5CGbuPbJDuCv8rQ50XB7Z" type="video/mp4" />
         </video>
         <!-- Background Music -->
         <audio id="bgMusic" loop>
